--- a/custom.css
+++ b/custom.css
@@ -6,21 +6,21 @@
        BACKGROUNDS
 *************************/
 
+#beginning,
+#about {
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+}
+
 #beginning {
-  background: url("img/cosmic.jpg") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url("img/cosmic.jpg") no-repeat center center fixed;  
   padding-top: 3em;
 }
 
 #about {
   background: url("img/about.jpg") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   height: 100%;
   padding: 20px 0 40px 0px;
   margin: -16px -15px 0 -15px;
