Made all the backgrond-image size to contain instead of cover

--- a/custom.css
+++ b/custom.css
@@ -28,7 +28,7 @@
 
 .card {
    background: url("img/bg.jpg") no-repeat center center fixed; 
-  background-size: cover;
+  background-size: contain;
 }
 
 
