--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@ body, html {
 *************************/
 
 #beginning {
-  background: url("img/cosmic.jpg") no-repeat center center fixed;  
+  background: url("img/cosmic.jpg") no-repeat center center;  
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -22,7 +22,7 @@ body, html {
 }
 
 #about {
-  background: url("img/about.jpg") no-repeat center center fixed; 
+  background: url("img/about.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
