--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@ body, html {
 *************************/
 
 #beginning {
-  background: url("img/cosmic.jpg") no-repeat center center;  
+  background: url("img/cosmic.jpg") no-repeat center center fixed;  
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -22,7 +22,7 @@ body, html {
 }
 
 #about {
-  background: url("img/about.jpg") no-repeat center center; 
+  background: url("img/about1.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -78,6 +78,9 @@ h5 {
   }
   .title {
    font-size: 2rem; 
+  }
+  #beginning, #about {
+    background-attachment: scroll;
   }
 }
 
