--- a/custom.css
+++ b/custom.css
@@ -27,10 +27,10 @@ body, html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
   height: auto;
   padding: 20px 0 40px 0px;
-  margin: -16px -15px 0 -15px;
-  width: 100%;
+  margin-top: -16px;
 }
 
 #footer {
