--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body, html {
 }
 
 #about {
-  background: url("../img/about1.jpg") no-repeat center center fixed; 
+  background: url("../img/about.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
