--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
 /*************************
-       BACKGROUNDS
+          General
 *************************/
 
 * {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
   background-color: #000;
   height: 100%;
+  font-family: "Lato", sans-serif;
 }
 
 /*************************
@@ -16,43 +18,53 @@ body, html {
 *************************/
 
 #beginning {
-  background: url("../img/cosmic.jpg") no-repeat center center fixed;  
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  width: 100%;
-  height: auto;
+  background: url("../img/cosmic.jpg") no-repeat center center fixed;
   padding-top: 1.7rem;
 }
 
 #about {
-  background: url("../img/about.jpg") no-repeat center center fixed; 
+  background: url("../img/about.jpg") no-repeat center center fixed;
+}
+
+#beginning,
+#about {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   width: 100%;
-  height: auto;
-  padding: 20px 0 40px 0px;
-  margin-top: -16px;
-}
-
-#footer {
-  margin-top: 40px;
-}
-
-.card {
-   background: #24292E;
-   background-size: cover;
-}
-
-hr {
-  background: white; 
+  height: 100%;
 }
 
 #florence {
+  width: 450px;
   border-radius: 100%;
+}
+
+#footer {
+  margin-top: 5px;
+}
+
+.beginning-text {
+  padding: 40px;
+}
+
+.title {
+  margin-top: 10px;
+}
+
+.card {
+  background: #24292e;
+  background-size: cover;
+}
+
+.card-text {
+  padding: 15px;
+  text-align: center;
+}
+
+hr {
+  background: #fff;
 }
 
 p {
@@ -60,35 +72,25 @@ p {
   line-height: 1.4;
 }
 
-.title {
-  display: inline-block;
-  margin-top: 10px;
-}
-
-h1, 
-h2, 
-h3,
-h4,
-h5 {
-  font-family: Rosarivo, serif;
-  font-weight: bold;
-}
-
 /*************************
-      MEDIA QUERIES
+          Mobile
 *************************/
-
 @media (max-width: 576px) {
   body {
-   font-size: 16px; 
+    font-size: 16px;
   }
+
   .title {
-   font-size: 2rem; 
+    font-size: 2rem;
   }
-  #beginning, #about {
+
+  .beginning-text-artist {
+    display: block;
+  }
+
+  #beginning,
+  #about {
     background-attachment: scroll;
   }
+
 }
-
-
-
